# dr.titra

./: .gitignore  README.md  dev.sh  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  release.yml
scripts/: create-icon.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-idle.rgba  tray-running.rgba
src-tauri/src/: lib.rs  main.rs
src/lib/: Dashboard.svelte  MinimalView.svelte  Onboarding.svelte  Settings.svelte  TaskList.svelte  Timer.svelte  TitleBar.svelte  api.js  store.js  time.js  timer-controller.js
