[package]
name = "dr-titra"
version = "0.1.0"
description = "Dr.titra - Time tracking widget for titra.io"
authors = ["dhanifudin"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dr_titra_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
